--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
 
     <!-- Logo with text below -->
-    <div class="logo-container" onclick="window.location.href='https://dein-link-zum-shop.com'">
+    <div class="logo-container" onclick="window.location.href='https://lgermanistanl.github.io/shop-v1'">
         <img src="https://raw.githubusercontent.com/lgermanistanl/material/refs/heads/main/germanistanlogo.png" alt="Logo" class="logo">
         <div class="logo-text">To The Shop €€€</div>
     </div>
